--- a/less/blocks/chains-stores.less
+++ b/less/blocks/chains-stores.less
@@ -40,3 +40,17 @@
   text-align: left;
   color: #ffffff;
 }
+
+@media @mobile-widths-only {
+  .chains-stores {
+    padding-top: 80px;
+    &:before{
+      top: 50px;
+      height: 96%;
+    }
+
+  }
+  .chains-stores__opening{
+    padding-right: 0;
+  }
+}
