--- a/less/blocks/essence.less
+++ b/less/blocks/essence.less
@@ -100,3 +100,64 @@
     display: block;
   }
 }
+
+@media @mobile-widths-only {
+  .essence {
+    padding-top: 70px;
+  }
+
+  .essence__qote {
+    font-size: 17px;
+    padding: 15px;
+  }
+
+  .qote__subtitle {
+    padding-top: 10px;
+    padding-left: 15px;
+    font-size: 11px;
+  }
+
+  .essence__video img {
+    border-radius: 5px;
+  }
+
+  .essence__video-lint {
+    font-size: 12px;
+    left: 38%;
+    width: 45%;
+    bottom: 5%;
+  }
+
+  .essence__name {
+    font-size: 22px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    margin-left: 45%;
+    &:before {
+      width: 102px;
+      height: 102px;
+      left: -70%;
+      top: -30px;
+    }
+  }
+
+  .essence__name-social-link {
+    top: 0px;
+    left: 74%;
+  }
+
+  .essence__right-col-text {
+    font-size: 12px;
+  }
+  .essence__list{
+    display: none;
+  }
+  .essence__phone-number{
+    margin: auto;
+    margin-top: 15px;
+  }
+  .essence__buttn{
+    margin: auto;
+    margin-top: 15px;
+  }
+}
