--- a/less/blocks/format.less
+++ b/less/blocks/format.less
@@ -57,3 +57,15 @@
   padding-left: 40px;
   padding-right: 40px;
 }
+
+@media @mobile-widths-only {
+  .format {
+    padding-top: 30px;
+  }
+  .format__list{
+    padding-top: 50px;
+  }
+  .format-number{
+    margin-top: 0;
+  }
+}
