--- a/less/blocks/sell.less
+++ b/less/blocks/sell.less
@@ -1,6 +1,5 @@
 //mobile first
 .sell {
-
   padding-top: 50px;
   & .container {
     padding-left: 35px;
@@ -73,6 +72,88 @@
   height: 55px;
 }
 
+
+
+@media @mobile-widths-only {
+  .sell{
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-bottom: 60px;
+    position: relative;
+    background-color: #efefef;
+    border-radius: 5px;
+
+    & .container{
+      padding-left: 15px;
+      padding-right: 15px;
+      background-color: inherit;
+      &:before{
+        position: absolute;
+        display: none;
+        top: 50px;
+        bottom: 0;
+        content: '';
+        left: 5%;
+        width: 90%;
+        background-color: #efefef;
+        border-radius: 5px;
+        box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.16);
+        z-index: -1;
+      }
+    }
+    .sell__right-col{
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+    .sell-footer::before{
+      display: none;
+    }
+    .sell-footer__list{
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+    .sell-footer-item{
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+
+
+  }
+  .sell-footer{
+    margin-top: 20px;
+    z-index: 5;
+    position: relative;
+    padding-bottom: 20px;
+    &:before{
+      width: 110%;
+      left: -5%;
+      top: 0;
+      bottom: 0;
+      position: absolute;
+      content: '';
+      display: block;
+      background-color: #f5f5f5;
+    }
+  }
+  .sell__right-col {
+    padding-left: 60px;
+  }
+  .sell-footer__list{
+    padding-top: 0;
+  }
+  .sell-footer__list{
+    padding-left: 60px;
+  }
+  .sell-footer-item{
+    padding-top: 5px;
+    width: 16.6%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 @media @tablet-widths {
   .sell{
     padding-bottom: 60px;
@@ -130,3 +211,4 @@
     padding-right: 0;
   }
 }
+
