--- a/less/blocks/total-earnings.less
+++ b/less/blocks/total-earnings.less
@@ -1,5 +1,4 @@
 .total-earnings__numbets-wrapper {
-  font-size: 165px;
   font-weight: bold;
   text-align: center;
 }
@@ -9,6 +8,7 @@
   position: relative;
   font-style: italic;
   font-weight: bold;
+  font-size: 165px;
   &:before {
     bottom: 0;
     left: 0;
@@ -35,4 +35,32 @@
 }
 .total-earnings__ruble{
   font-size: 89px;
+}
+
+@media @mobile-widths-only {
+  .total-earnings__numbets{
+    font-size: 44px;
+    line-height: 1;
+    padding-bottom: 8px;
+    &:before {
+      bottom: 0;
+      left: 0;
+      content: '';
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 4px;
+      background-color: @yellow-color;
+    }
+  }
+  .total-earnings__ruble{
+    font-size: 18px;
+  }
+  .total-earnings__description{
+    font-size: 12px;
+  }
+  .total-earnings__wrapper {
+    padding-top: 30px;
+    max-width: 80%;
+  }
 }
