--- a/less/blocks/audience.less
+++ b/less/blocks/audience.less
@@ -14,3 +14,12 @@
 .audience__title{
   margin: 0;
 }
+@media @mobile-widths-only {
+  .audience{
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 90%;
+    border-radius: 5px;
+  }
+
+}
