--- a/less/blocks/control.less
+++ b/less/blocks/control.less
@@ -1,3 +1,10 @@
 .control{
   margin-top: 60px;
 }
+@media @mobile-widths-only {
+  .control{
+    margin-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
