--- a/less/blocks/plan.less
+++ b/less/blocks/plan.less
@@ -35,3 +35,33 @@ font-size: 83px;
   font-style: italic;
   margin-bottom: 100px;
 }
+
+@media @mobile-widths-only {
+  .plan{
+    padding-bottom: 0;
+  }
+  .plan__top-wrapper{
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-top: 15px;
+    margin-bottom: 10px;
+  }
+  .plan__suptittle{
+    font-size: 9px;
+    margin-bottom: 10px;
+  }
+  .plan__title{
+    font-size: 28px
+  }
+  .plan__subtitle{
+    margin-top: 5px;
+    padding-top: 11px;
+    font-size: 9px;
+    text-align: center;
+    font-weight: 900;
+  }
+  .plan__subtitle{
+
+  }
+}
