--- a/less/blocks/promotion.less
+++ b/less/blocks/promotion.less
@@ -1,14 +1,31 @@
-.promotion{
+.promotion {
   margin-top: 30px;
-  & h4{
+  & h4 {
     margin-top: 30px;
     margin-bottom: 0;
     font-size: 20px;
     font-family: @arial;
     font-weight: bold;
   }
-  & p{
+  & p {
     padding-top: 5px;
     font-size: 16px;
+  }
+}
+
+@media @mobile-widths-only {
+  .promotion {
+    padding-left: 15px;
+    padding-right: 15px;
+    & h4 {
+      margin-top: 15px;
+      font-size: 14px;
+    }
+    & p {
+      font-size: 12px;
+    }
+  }
+  .promotion__item{
+    margin-bottom: 20px;
   }
 }
