--- a/less/blocks/technologies.less
+++ b/less/blocks/technologies.less
@@ -78,3 +78,46 @@
   line-height: 1.5;
   text-align: left;
 }
+@media @mobile-widths-only {
+  .technologies{
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 50px;
+  }
+  .technologies-aside__title{
+    font-size: 18px;
+  }
+  .technologies-aside__subtitle{
+    font-weight: bold;
+    padding-right: 15px;
+    font-size: 18px;
+  }
+  .technologies__screen-description{
+    padding-top: 30px;
+  }
+  .technologies__screen-link{
+    flex-wrap: nowrap;
+  }
+  .technologies__screen-link-description{
+    font-size: 12px;
+    & span{
+      font-weight: normal;
+    }
+  }
+  .technologies__screen-description{
+    font-size: 12px;
+  }
+  .technologies__bottom{
+    padding-top: 10px;
+  }
+  .technologies__bottom-title{
+    font-size: 15px;
+  }
+  .technologies__bottom-description{
+    font-size: 12px;
+    padding-top: 5px;
+  }
+  .technolodies__bottom-item{
+    margin-bottom: 10px;
+  }
+}
