--- a/less/blocks/get.less
+++ b/less/blocks/get.less
@@ -1,10 +1,11 @@
-.get{
+.get {
   padding-top: 60px;
   padding-bottom: 80px;
 }
-.get__image-warehouse{
+
+.get__image-warehouse {
   position: relative;
-  &:before{
+  &:before {
     position: absolute;
     bottom: 19px;
     left: 31px;
@@ -17,6 +18,7 @@
     font-size: 18px;
   }
 }
+
 .get-asside__yellow {
   margin-top: 95px;
   padding-top: 297px;
@@ -24,7 +26,7 @@
   background-color: @yellow-color;
   border-radius: 0 0 5px 5px;
   margin-bottom: 60px;
-  &:before{
+  &:before {
     position: absolute;
     bottom: -58px;
     content: '';
@@ -35,7 +37,7 @@
     border-right: 170px solid transparent;
     border-top: 58px solid @yellow-color;
   }
-  &:after{
+  &:after {
     position: absolute;
     top: -100px;
     content: '';
@@ -46,7 +48,7 @@
     display: block;
     box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .17)
   }
-  & h3{
+  & h3 {
     text-align: center;
     font-size: 21px;
     line-height: 1.5;
@@ -55,7 +57,7 @@
   }
 }
 
-.get-asside__yellow-description{
+.get-asside__yellow-description {
   font-family: @arial;
   font-size: 16px;
   line-height: 1.5;
@@ -66,9 +68,9 @@
   padding-right: 50px;
 }
 
-.get-asside__yellow-description{
+.get-asside__yellow-description {
   position: relative;
-  &:before{
+  &:before {
     position: absolute;
     bottom: -10px;
     content: '';
@@ -78,7 +80,7 @@
     border-right: 60px solid transparent;
     border-top: 20px solid rgba(13, 13, 13, 0.28);
   }
-  &:after{
+  &:after {
     position: absolute;
     bottom: -9px;
     content: '';
@@ -89,9 +91,42 @@
     border-top: 20px solid @yellow-color;
   }
 }
-.get__button{
+
+.get__button {
   margin-left: 37px;
   margin-right: 37px;
   padding-left: 45px;
   padding-right: 45px;
+}
+
+@media @mobile-widths-only {
+  .get-asside {
+    margin-top: 30px;
+  }
+
+  .get-asside__yellow {
+    padding-top: 200px;
+    &:after {
+      background-size: contain;
+      height: 290px;
+    }
+    h3 {
+      padding-left: 0;
+      padding-right: 0;
+    }
+    .get-asside__yellow-description {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+
+  .get__button {
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
+    width: 230px;
+    display: block;
+    margin: auto;
+  }
 }
