--- a/less/blocks/installation.less
+++ b/less/blocks/installation.less
@@ -80,3 +80,66 @@
     top: 10px;
   }
 }
+@media @mobile-widths-only {
+  .installation{
+    padding-top: 30px;
+    &:before {
+      left: 5%;
+      right: 5%;
+      width: 90%;
+    }
+  }
+
+  .installation-top{
+    padding-bottom: 0;
+  }
+
+  .installation-top__left-col{
+    padding-right: 38px;
+    padding-left: 38px;
+    &:before{
+      display: none;
+    }
+    &:after{
+      border: none;
+    }
+    & h3{
+      color: #fff;
+      font-size: 19px;
+      text-align: center;
+    }
+    & p{
+      color: #fff;
+    }
+  }
+  .installation-top__right-col{
+    padding-right: 35px;
+    padding-left: 35px;
+    & h3{
+      text-align: center;
+      font-size: 29px;
+    }
+  }
+  .installation-bottom{
+    padding-left: 20px;
+    padding-right: 20px;
+    & h4{
+      margin-left: 15px;
+      margin-right: 15px;
+      text-align: center;
+      padding-bottom: 20px;
+      margin-bottom: 0;
+    }
+  }
+  .installation__list{
+    padding-bottom: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid rgba(255, 255, 255, .3);
+  }
+  .installation__btn{
+    margin: 0;
+  }
+
+}
