--- a/less/blocks/marketing.less
+++ b/less/blocks/marketing.less
@@ -9,3 +9,23 @@
     margin-left: 30px;
   }
 }
+@media @mobile-widths-only {
+  .marketing{
+    margin-top: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: 30px;
+    & h2{
+      margin-bottom: 15px;
+    }
+    & h3{
+      margin-top: 15px;
+    }
+  }
+  .marketing__img-wrapper{
+    margin-top: 15px;
+  }
+  .marketing__img-wrapper {
+    min-height: 150px;
+  }
+}
