--- a/less/blocks/presentation.less
+++ b/less/blocks/presentation.less
@@ -33,4 +33,58 @@
     transform: translate(-50%,-50%);
   }
 }
+.presentation__condition{
+  padding-top: 15px;
+}
+@media @mobile-widths-only {
+  .presentation{
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 30px;
+    &:before{
+      left: 5%;
+      right: 5%;
+    }
+  }
+  .presentation__list{
+    padding-top: 15px;
+  }
+  .presentation-btn{
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 15px;
+  }
+  .presentation__condition{
+    text-align: center;
+    color: #7b7b7b;
+    font-size: 15px;
+  }
+  .personal{
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .personal-aside__wrapper{
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 30px;
+  }
+  .personal-aside___item{
+    padding-bottom: 20px;
+    &:last-child{
+      padding-bottom: 35px;
+    }
+  }
+  .personal__btn{
+    padding-left: 0;
+    padding-right: 0;
+    width: 100%;
+    margin-top: 30px;
+  }
+  .personal__phone{
+    display: block;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
 
