--- a/less/blocks/profit.less
+++ b/less/blocks/profit.less
@@ -1,25 +1,47 @@
-.profit{
+.profit {
   padding-top: 90px;
 }
-.profit__list{
+
+.profit__list {
   padding-top: 15px;
   padding-left: 30px;
 }
-.profit__item{
+
+.profit__item {
   font-size: 16px;
   font-weight: normal;
   font-family: @arial;
   padding-left: 0;
-  & span{
+  & span {
     font-size: 10px;
   }
-  &:before{
+  &:before {
     display: none;
   }
 }
-.plan__link{
+
+.plan__link {
   margin-top: 15px;
   display: inline-block;
-  border-bottom: 1px solid #C7C7C7 ;
+  border-bottom: 1px solid #C7C7C7;
   color: #0D0D0D;
+}
+
+@media @mobile-widths-only {
+  .profit {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 50px;
+  }
+
+  .profit__list {
+    padding-left: 25px;
+  }
+
+  .profit__item {
+    font-size: 12px;
+  }
+  .plan__link{
+    display: none;
+  }
 }
