--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -16,3 +16,16 @@
   margin-top: 90px;
   text-align: center;
 }
+@media @mobile-widths-only {
+  .form{
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .form-control {
+    padding: 10px 30px;
+  }
+  .form-btn{
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
