--- a/less/blocks/chains-stores.less
+++ b/less/blocks/chains-stores.less
@@ -39,6 +39,17 @@
   line-height: 1.17;
   text-align: left;
   color: #ffffff;
+  &:before{
+    display: block;
+    position: absolute;
+    content: '';
+    top: -17px;
+    right:195px;
+    width: 80px;
+    background-image: url("/img/icons/youtube.svg");
+    background-size: cover;
+    height: 68px;
+  }
 }
 
 @media @mobile-widths-only {
