--- a/less/blocks/essence.less
+++ b/less/blocks/essence.less
@@ -67,9 +67,11 @@
 .essence__name-social-link{
   position: absolute;
   top: 0;
-  left: 100px;
+  left: 90px;
   display: block;
   content:'';
+  width: 22px;
+  height: 22px;
 }
 .essence__right-col-text{
   font-family: @arial;
