--- a/less/blocks/installation.less
+++ b/less/blocks/installation.less
@@ -42,13 +42,24 @@
     position: absolute;
     display: block;
     content: '';
-    right: 30px;
+    right: 24px;
     height: 125%;
     top: 3px;
-    border-top: 119px solid transparent;
-    border-left: 30px solid @yellow-color;
-    border-bottom: 119px solid transparent;
+    width: 40px;
+    background-image: url("/img/right-triangle.png");
+    background-size: cover;
   }
+  //&:after {
+  //  position: absolute;
+  //  display: block;
+  //  content: '';
+  //  right: 30px;
+  //  height: 125%;
+  //  top: 3px;
+  //  border-top: 119px solid transparent;
+  //  border-left: 30px solid @yellow-color;
+  //  border-bottom: 119px solid transparent;
+  //}
   h3 {
     max-width: 600px;
   }
