--- a/less/global/fonts.less
+++ b/less/global/fonts.less
@@ -72,7 +72,7 @@
   font-weight: 900;
   src: local("Exo-2 Black Italic"),
   local("Exo2-Medium-Italic"),
-  //url("/fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"),
+    //url("/fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"),
   url("/fonts/ttf/Exo2-BlackItalic.ttf") format("truetype");
 }
 
@@ -82,7 +82,16 @@
   font-weight: 900;
   src: local("Exo-2 Black "),
   local("Exo2-Black"),
-  //url("/fonts/Exo2.0-Medium.otf?") format("embedded-opentype"),
+    //url("/fonts/Exo2.0-Medium.otf?") format("embedded-opentype"),
   url("/fonts/ttf/Exo2-Black.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Panton';
+  font-style: italic;
+  font-weight: 900;
+  src: local("Panton Black Italic"),
+  local("Panton-Black-Italic"),
+  url("/fonts/Panton-BlackItalic.otf?") format("embedded-opentype");
 }
 
