--- a/css/style.css
+++ b/css/style.css
@@ -471,6 +471,12 @@ template {
   font-weight: 900;
   src: local("Exo-2 Black "), local("Exo2-Black"), url("/fonts/ttf/Exo2-Black.ttf") format("truetype");
 }
+@font-face {
+  font-family: 'Panton';
+  font-style: italic;
+  font-weight: 900;
+  src: local("Panton Black Italic"), local("Panton-Black-Italic"), url("/fonts/Panton-BlackItalic.otf?") format("embedded-opentype");
+}
 body {
   font-family: "Exo-2", "Arial", sans-serif;
   background-color: #fff;
@@ -513,6 +519,11 @@ h4 {
 }
 a {
   text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+  color: #c30404;
+  border-color: #c30404;
 }
 img {
   max-width: 100%;
@@ -669,13 +680,14 @@ button {
 }
 .phone-number:before {
   position: absolute;
-  left: 0;
   content: '';
-  top: 7px;
+  left: -15px;
+  top: 13px;
   display: block;
-  width: 15px;
-  height: 36px;
-  background-color: #000000;
+  width: 33px;
+  height: 35px;
+  background-image: url("/img/icons/mobile.svg");
+  background-size: cover;
 }
 .phone-number:after {
   position: absolute;
@@ -689,6 +701,10 @@ button {
 }
 .phone-number--black {
   color: #000;
+}
+.phone-number--black:before {
+  background-image: url("/img/icons/mobile-black.svg");
+  top: 5px;
 }
 .subtitle {
   font-family: Arial;
@@ -714,7 +730,26 @@ button {
 .page-header {
   background: url("/img/header-bg.jpg");
   padding-top: 86px;
-  padding-bottom: 90px;
+  margin-bottom: 90px;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 5px;
+  position: relative;
+  background-size: cover;
+  margin-top: 50px;
+}
+.page-header-title {
+  font-size: 63px;
+  font-family: "Panton", "Arial", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+}
+.page-header__logo {
+  width: 30%;
+}
+.header-bottom-line {
+  margin-top: 30px;
+  width: 100%;
 }
 .page-header__top-wrapper {
   display: -ms-flexbox;
@@ -738,7 +773,7 @@ button {
   position: absolute;
   display: block;
   content: '';
-  background-color: #FFE200;
+  background-color: rgba(255, 226, 0, 0.9);
   width: 2000px;
   height: 100%;
   z-index: -1;
@@ -802,18 +837,48 @@ button {
   width: 133px;
   margin-top: 10px;
 }
+.fixed {
+  position: fixed;
+  transition: 1s;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 300;
+  width: 100%;
+  padding-top: 0;
+}
+.fixed + .page-header__intro {
+  margin-top: 100px;
+}
+.fixed .navbar {
+  margin: auto;
+}
+.fixed .fixed-container {
+  margin: auto;
+}
 .main-nav__link {
   font-weight: bold;
   color: #fff;
   border-bottom: 1px solid #fff;
   font-size: 14px;
-  padding: 0;
   font-family: Arial;
+  padding: 0;
 }
 .main-nav__link:hover {
   color: #FFE200;
   border-bottom: 1px solid #FFE200;
   transition: .3s;
+}
+.main-nav__link--home {
+  border-bottom: none;
+}
+.navbar {
+  width: 100%;
+}
+.collapse {
+  -ms-flex-pack: end;
+      justify-content: flex-end;
 }
 .main-nav__item {
   padding: .5rem 1rem;
@@ -1000,6 +1065,17 @@ button {
   text-align: left;
   color: #ffffff;
 }
+.chains-stores__video-title:before {
+  display: block;
+  position: absolute;
+  content: '';
+  top: -17px;
+  right: 195px;
+  width: 80px;
+  background-image: url("/img/icons/youtube.svg");
+  background-size: cover;
+  height: 68px;
+}
 .icons-row {
   padding-top: 60px;
 }
@@ -1069,9 +1145,11 @@ button {
 .essence__name-social-link {
   position: absolute;
   top: 0;
-  left: 100px;
+  left: 90px;
   display: block;
   content: '';
+  width: 22px;
+  height: 22px;
 }
 .essence__right-col-text {
   font-family: 'Arial', sans-serif;
@@ -1244,18 +1322,6 @@ button {
   position: relative;
   background-color: #FFE200;
   border-radius: 0 0 5px 5px;
-  margin-bottom: 60px;
-}
-.get-asside__yellow:before {
-  position: absolute;
-  bottom: -58px;
-  content: '';
-  left: 5px;
-  right: 5px;
-  display: block;
-  border-left: 170px solid transparent;
-  border-right: 170px solid transparent;
-  border-top: 58px solid #FFE200;
 }
 .get-asside__yellow:after {
   position: absolute;
@@ -1274,6 +1340,10 @@ button {
   line-height: 1.5;
   padding-left: 57px;
   padding-right: 57px;
+}
+.get-bottom-triangle {
+  margin-top: -5px;
+  margin-bottom: 60px;
 }
 .get-asside__yellow-description {
   font-family: 'Arial', sans-serif;
@@ -1356,12 +1426,12 @@ button {
   position: absolute;
   display: block;
   content: '';
-  right: 30px;
+  right: 24px;
   height: 125%;
   top: 3px;
-  border-top: 119px solid transparent;
-  border-left: 30px solid #FFE200;
-  border-bottom: 119px solid transparent;
+  width: 40px;
+  background-image: url("/img/right-triangle.png");
+  background-size: cover;
 }
 .installation-top__left-col h3 {
   max-width: 600px;
@@ -1499,6 +1569,7 @@ button {
 }
 .personal {
   padding-top: 80px;
+  margin-bottom: 80px;
 }
 .personal-aside__wrapper {
   background-color: #fafafa;
@@ -1542,6 +1613,8 @@ button {
 }
 .data-base__lock {
   text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.7);
+  display: block;
+  margin: auto;
 }
 .data-base__number {
   font-family: "Exo-2", sans-serif;
@@ -1920,6 +1993,80 @@ button {
   }
   .page-header-title {
     font-size: 23px;
+  }
+  .page-header__top-phone {
+    display: none;
+  }
+  .page-header {
+    padding-top: 30px;
+    border-radius: 5px;
+  }
+  .page-header__logo {
+    width: 80%;
+  }
+  .page-header {
+    width: 90%;
+    margin: auto;
+  }
+  .page-header-title {
+    font-size: 24px;
+    font-family: "Panton", "Arial", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
+  .page-header-title__description {
+    font-size: 11px;
+  }
+  .page-header__suggestion {
+    font-size: 15px;
+    font-weight: bold;
+    font-style: italic;
+    color: #ffffff;
+  }
+  .page-header__description {
+    font-size: 13px;
+    padding-top: 19px;
+    font-weight: 500;
+  }
+  .experience__number {
+    display: none;
+  }
+  .experience__text {
+    display: none;
+  }
+  .experience__phone-wrapper {
+    display: none;
+  }
+  .experience {
+    margin-top: 30px;
+  }
+  .page-header-bottom__item {
+    font-size: 12px;
+  }
+  .page-header-bottom__item:nth-child(2n - 1) {
+    border-left: none;
+  }
+  .page-header__action {
+    display: none;
+  }
+  .navbar-toggler {
+    border: none;
+    padding: 0;
+    box-shadow: none;
+    width: 20%;
+  }
+  .navbar-toggler:before {
+    content: "";
+    position: absolute;
+    right: 14px;
+    top: 17px;
+    width: 20px;
+    height: 2px;
+    background-color: #fff;
+    box-shadow: 0 6px 0 0 #fff, 0 12px 0 0 #fff;
+  }
+  .main-nav__link {
+    text-align: center;
   }
   .total-earnings__numbets {
     font-size: 44px;
