--- a/less/blocks/get.less
+++ b/less/blocks/get.less
@@ -25,18 +25,28 @@
   position: relative;
   background-color: @yellow-color;
   border-radius: 0 0 5px 5px;
-  margin-bottom: 60px;
-  &:before {
-    position: absolute;
-    bottom: -58px;
-    content: '';
-    left: 5px;
-    right: 5px;
-    display: block;
-    border-left: 170px solid transparent;
-    border-right: 170px solid transparent;
-    border-top: 58px solid @yellow-color;
-  }
+
+  //&:before {
+  //  position: absolute;
+  //  bottom: 0;
+  //  content: '';
+  //  left: 5px;
+  //  right: 5px;
+  //  display: block;
+  //  background-image: url("/img/bottom-triangle.png");
+  //
+  //}
+  //&:before {
+  //  position: absolute;
+  //  bottom: -58px;
+  //  content: '';
+  //  left: 5px;
+  //  right: 5px;
+  //  display: block;
+  //  border-left: 170px solid transparent;
+  //  border-right: 170px solid transparent;
+  //  border-top: 58px solid @yellow-color;
+  //}
   &:after {
     position: absolute;
     top: -100px;
@@ -55,6 +65,10 @@
     padding-left: 57px;
     padding-right: 57px;
   }
+}
+.get-bottom-triangle{
+  margin-top: -5px;
+  margin-bottom: 60px;
 }
 
 .get-asside__yellow-description {
