--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -1,28 +1,55 @@
 .page-header {
   background: url("/img/header-bg.jpg");
   padding-top: 86px;
-  padding-bottom: 90px;
+  margin-bottom: 90px;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 5px;
+  position: relative;
+  background-size: cover;
+  margin-top: 50px;
 }
-.page-header__top-wrapper{
+
+.page-header-title {
+  font-size: 63px;
+  font-family: "Panton", "Arial", sans-serif;;
+  font-weight: 900;
+  font-style: italic;
+}
+
+.page-header__logo {
+  width: 30%;
+}
+
+.header-bottom-line {
+  margin-top: 30px;
+  width: 100%;
+}
+
+.page-header__top-wrapper {
   display: flex;
   justify-content: space-between;
 }
-.page-header__intro{
+
+.page-header__intro {
   font-family: "Exo 2", "Arial", sans-serif;
   padding-top: 45px;
 }
-.page-header__title-wrapper{
+
+.page-header__title-wrapper {
   font-family: "Exo 2", "Arial", sans-serif;
   width: 80%;
   position: relative;
   z-index: 2;
   padding-top: 30px;
+  padding-top: 30px;
   padding-bottom: 30px;
-  &:before{
+  &:before {
     position: absolute;
     display: block;
     content: '';
-    background-color: @yellow-color;
+    background-color: rgba(255, 226, 0, 0.9);
+
     width: 2000px;
     height: 100%;
     z-index: -1;
@@ -33,12 +60,14 @@
     border-radius: 3px;
   }
 }
-.page-header-title__description{
+
+.page-header-title__description {
   font-style: italic;
   font-size: 32px;
   line-height: 1.5;
 }
-.page-header__suggestion{
+
+.page-header__suggestion {
   font-size: 35px;
   font-weight: bold;
   font-style: italic;
@@ -48,7 +77,8 @@
   width: 92%;
   font-family: "Exo 2", "Arial", sans-serif;
 }
-.page-header__description{
+
+.page-header__description {
   font-family: "Exo 2", "Arial", sans-serif;
   font-size: 25px;
   font-weight: 300;
@@ -58,11 +88,12 @@
   color: #ffffff;
   width: 92%;
 }
-.page-header-bottom{
+
+.page-header-bottom {
   padding-top: 40px;
 }
 
-.page-header-bottom__item{
+.page-header-bottom__item {
   font-family: "Exo 2", "Arial", sans-serif;
   font-weight: bold;
   font-style: italic;
@@ -73,12 +104,13 @@
   text-align: center;
   border-left: 1px solid @yellow-color;
 
-  &:first-child{
+  &:first-child {
     border-left: none;
     text-align: left;
   }
 }
-.page-header__action{
+
+.page-header__action {
   position: absolute;
   bottom: -15px;
   left: 25%;
@@ -89,8 +121,101 @@
   width: 133px;
   margin-top: 10px;
 }
+
+.fixed {
+  position: fixed;
+  transition: 1s;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .7);
+  z-index: 300;
+  width: 100%;
+  padding-top: 0;
+  & + .page-header__intro{
+    margin-top: 100px;
+  }
+  & .navbar {
+    margin: auto;
+  }
+
+  & .fixed-container{
+    margin: auto;
+  }
+}
+
 @media @mobile-widths-only {
-  .page-header-title{
+  .page-header-title {
     font-size: 23px;
+  }
+
+  .page-header__top-phone {
+    display: none;
+  }
+
+  .page-header {
+    padding-top: 30px;
+    border-radius: 5px;
+  }
+
+  .page-header__logo {
+    width: 80%;
+  }
+
+  .page-header {
+    width: 90%;
+    margin: auto;
+  }
+
+  .page-header-title {
+    font-size: 24px;
+    font-family: "Panton", "Arial", sans-serif;;
+    font-weight: 900;
+    font-style: italic;
+  }
+
+  .page-header-title__description {
+    font-size: 11px;
+  }
+
+  .page-header__suggestion {
+    font-size: 15px;
+    font-weight: bold;
+    font-style: italic;
+    color: #ffffff;
+  }
+
+  .page-header__description {
+    font-size: 13px;
+    padding-top: 19px;
+    font-weight: 500;
+  }
+
+  .experience__number {
+    display: none;
+  }
+
+  .experience__text {
+    display: none;
+  }
+
+  .experience__phone-wrapper {
+    display: none;
+  }
+
+  .experience {
+    margin-top: 30px;
+  }
+
+  .page-header-bottom__item {
+    font-size: 12px;
+    &:nth-child(2n - 1) {
+      border-left: none;
+    }
+  }
+
+  .page-header__action {
+    display: none;
+
   }
 }
